fixed photo orientation, drawing arrow position, cropper issue, edit overlay

--- a/src/pages/preview-photo/preview-photo.scss
+++ b/src/pages/preview-photo/preview-photo.scss
@@ -28,6 +28,9 @@ page-preview-photo {
     }
     
     ion-content.preview {
+        .scroll-content {
+            transform: translateY(-2px);
+        }
         .canvas-text {
             position: absolute;
             background-color: transparent;
